fix sidebar drag region overlapping window controls with web windowbar (#1536)

--- a/src/renderer/features/now-playing/components/sidebar-play-queue.module.css
+++ b/src/renderer/features/now-playing/components/sidebar-play-queue.module.css
@@ -90,8 +90,19 @@
 }
 
 .draggable-region {
+    position: relative;
     flex-shrink: 0;
     width: 100%;
     height: 65px;
     -webkit-app-region: drag;
+}
+
+.draggable-region::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 130px;
+    height: 100%;
+    content: '';
+    -webkit-app-region: no-drag;
 }
